parser.output
Terminals unused in grammar

   BOOL
   INTARRAY
   AUTO


Grammar

    0 $accept: Program $end

    1 Program: L_NT

    2 L_NT: L_NT F_NT
    3     | F_NT

    4 F_NT: FUNCTION IDENTIFIER OPENPAREN Param_List CLOSEPAREN COLON TYPE OPENCURLY Body CLOSECURLY

    5 Param_List: NEParam_List
    6           | /* empty */

    7 NEParam_List: Param SEMICOLON NEParam_List
    8             | Param

    9 Param: Ident_List COLON TYPE

   10 Ident_List: IDENTIFIER COMMA Ident_List
   11           | IDENTIFIER

   12 Body: Var_Dec_List F_Dec_List S_List Return_S

   13 Var_Dec_List: NEVar_Dec_List
   14             | /* empty */

   15 NEVar_Dec_List: Var_Dec SEMICOLON NEVar_Dec_List
   16               | Var_Dec SEMICOLON

   17 Var_Dec: VAR Ident_List COLON Dec_Type

   18 Dec_Type: TYPE
   19         | IDENTIFIER OPENBRACKET INT CLOSEBRACKET

   20 F_Dec_List: NEF_Dec_List
   21           | /* empty */

   22 NEF_Dec_List: F_Dec NEF_Dec_List
   23             | F_Dec

   24 F_Dec: F_NT

   25 S_List: NES_List
   26       | /* empty */

   27 NES_List: S NES_List
   28         | S

   29 S: Ass_S
   30  | Arr_Ass_St
   31  | C_S
   32  | Arr_C_S
   33  | If_S
   34  | Y_S
   35  | If_E_S
   36  | W_S

   37 Ass_S: IDENTIFIER AS_OP Expr SEMICOLON

   38 Arr_Ass_St: IDENTIFIER OPENBRACKET Expr CLOSEBRACKET AS_OP Expr SEMICOLON

   39 C_S: IDENTIFIER AS_OP IDENTIFIER OPENPAREN Arg_List CLOSEPAREN SEMICOLON

   40 Arr_C_S: IDENTIFIER OPENBRACKET Expr CLOSEBRACKET AS_OP IDENTIFIER OPENPAREN Arg_List CLOSEPAREN SEMICOLON

   41 Arg_List: NEArg_List
   42         | /* empty */

   43 NEArg_List: Expr COMMA NEArg_List
   44           | Expr

   45 If_S: IF OPENPAREN Expr CLOSEPAREN OPENCURLY S_List CLOSECURLY

   46 Y_S: YIELD Expr SEMICOLON

   47 If_E_S: IF OPENPAREN Expr CLOSEPAREN OPENCURLY S_List CLOSECURLY ELSE OPENCURLY S_List CLOSECURLY

   48 W_S: WHILE OPENPAREN Expr CLOSEPAREN OPENCURLY S_List CLOSECURLY

   49 Return_S: RETURN Expr SEMICOLON

   50 Expr: Expr OR_OP Expr
   51     | Expr AND_OP Expr
   52     | Expr EQ_OP Expr
   53     | Expr GT_OP Expr
   54     | Expr GE_OP Expr
   55     | Expr LT_OP Expr
   56     | Expr LE_OP Expr
   57     | Expr NE_OP Expr
   58     | Expr PLUS Expr
   59     | Expr MINUS Expr
   60     | Expr TIMES Expr
   61     | Expr DIV Expr
   62     | U_Lit

   63 U_Lit: MINUS U_Lit
   64      | NOT_OP U_Lit
   65      | Lit

   66 Lit: OPENPAREN Expr CLOSEPAREN
   67    | TRUE_NT
   68    | FALSE_NT
   69    | RATIONAL
   70    | INT
   71    | IDENTIFIER
   72    | IDENTIFIER OPENBRACKET Expr CLOSEBRACKET


Terminals, with rules where they appear

$end (0) 0
error (256)
TYPE (258) 4 9 18
IDENTIFIER (259) 4 10 11 19 37 38 39 40 71 72
BOOL (260)
INT (261) 19 70
RATIONAL (262) 69
IF (263) 45 47
ELSE (264) 47
WHILE (265) 48
VAR (266) 17
FUNCTION (267) 4
INTARRAY (268)
AUTO (269)
RETURN (270) 49
YIELD (271) 46
TRUE_NT (272) 67
FALSE_NT (273) 68
PLUS (274) 58
MINUS (275) 59 63
TIMES (276) 60
DIV (277) 61
AS_OP (278) 37 38 39 40
EQ_OP (279) 52
GT_OP (280) 53
GE_OP (281) 54
LT_OP (282) 55
LE_OP (283) 56
NE_OP (284) 57
AND_OP (285) 51
OR_OP (286) 50
NOT_OP (287) 64
COLON (288) 4 9 17
OPENBRACKET (289) 19 38 40 72
CLOSEBRACKET (290) 19 38 40 72
OPENCURLY (291) 4 45 47 48
CLOSECURLY (292) 4 45 47 48
COMMA (293) 10 43
OPENPAREN (294) 4 39 40 45 47 48 66
CLOSEPAREN (295) 4 39 40 45 47 48 66
SEMICOLON (296) 7 15 16 37 38 39 40 46 49
UNARY (297)


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
Program (44)
    on left: 1, on right: 0
L_NT (45)
    on left: 2 3, on right: 1 2
F_NT (46)
    on left: 4, on right: 2 3 24
Param_List (47)
    on left: 5 6, on right: 4
NEParam_List (48)
    on left: 7 8, on right: 5 7
Param (49)
    on left: 9, on right: 7 8
Ident_List (50)
    on left: 10 11, on right: 9 10 17
Body (51)
    on left: 12, on right: 4
Var_Dec_List (52)
    on left: 13 14, on right: 12
NEVar_Dec_List (53)
    on left: 15 16, on right: 13 15
Var_Dec (54)
    on left: 17, on right: 15 16
Dec_Type (55)
    on left: 18 19, on right: 17
F_Dec_List (56)
    on left: 20 21, on right: 12
NEF_Dec_List (57)
    on left: 22 23, on right: 20 22
F_Dec (58)
    on left: 24, on right: 22 23
S_List (59)
    on left: 25 26, on right: 12 45 47 48
NES_List (60)
    on left: 27 28, on right: 25 27
S (61)
    on left: 29 30 31 32 33 34 35 36, on right: 27 28
Ass_S (62)
    on left: 37, on right: 29
Arr_Ass_St (63)
    on left: 38, on right: 30
C_S (64)
    on left: 39, on right: 31
Arr_C_S (65)
    on left: 40, on right: 32
Arg_List (66)
    on left: 41 42, on right: 39 40
NEArg_List (67)
    on left: 43 44, on right: 41 43
If_S (68)
    on left: 45, on right: 33
Y_S (69)
    on left: 46, on right: 34
If_E_S (70)
    on left: 47, on right: 35
W_S (71)
    on left: 48, on right: 36
Return_S (72)
    on left: 49, on right: 12
Expr (73)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61 62, on right: 37 38
    40 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 66
    72
U_Lit (74)
    on left: 63 64 65, on right: 62 63 64
Lit (75)
    on left: 66 67 68 69 70 71 72, on right: 65


state 0

    0 $accept: . Program $end

    FUNCTION  shift, and go to state 1

    Program  go to state 2
    L_NT     go to state 3
    F_NT     go to state 4


state 1

    4 F_NT: FUNCTION . IDENTIFIER OPENPAREN Param_List CLOSEPAREN COLON TYPE OPENCURLY Body CLOSECURLY

    IDENTIFIER  shift, and go to state 5


state 2

    0 $accept: Program . $end

    $end  shift, and go to state 6


state 3

    1 Program: L_NT .
    2 L_NT: L_NT . F_NT

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 1 (Program)

    F_NT  go to state 7


state 4

    3 L_NT: F_NT .

    $default  reduce using rule 3 (L_NT)


state 5

    4 F_NT: FUNCTION IDENTIFIER . OPENPAREN Param_List CLOSEPAREN COLON TYPE OPENCURLY Body CLOSECURLY

    OPENPAREN  shift, and go to state 8


state 6

    0 $accept: Program $end .

    $default  accept


state 7

    2 L_NT: L_NT F_NT .

    $default  reduce using rule 2 (L_NT)


state 8

    4 F_NT: FUNCTION IDENTIFIER OPENPAREN . Param_List CLOSEPAREN COLON TYPE OPENCURLY Body CLOSECURLY

    IDENTIFIER  shift, and go to state 9

    $default  reduce using rule 6 (Param_List)

    Param_List    go to state 10
    NEParam_List  go to state 11
    Param         go to state 12
    Ident_List    go to state 13


state 9

   10 Ident_List: IDENTIFIER . COMMA Ident_List
   11           | IDENTIFIER .

    COMMA  shift, and go to state 14

    $default  reduce using rule 11 (Ident_List)


state 10

    4 F_NT: FUNCTION IDENTIFIER OPENPAREN Param_List . CLOSEPAREN COLON TYPE OPENCURLY Body CLOSECURLY

    CLOSEPAREN  shift, and go to state 15


state 11

    5 Param_List: NEParam_List .

    $default  reduce using rule 5 (Param_List)


state 12

    7 NEParam_List: Param . SEMICOLON NEParam_List
    8             | Param .

    SEMICOLON  shift, and go to state 16

    $default  reduce using rule 8 (NEParam_List)


state 13

    9 Param: Ident_List . COLON TYPE

    COLON  shift, and go to state 17


state 14

   10 Ident_List: IDENTIFIER COMMA . Ident_List

    IDENTIFIER  shift, and go to state 9

    Ident_List  go to state 18


state 15

    4 F_NT: FUNCTION IDENTIFIER OPENPAREN Param_List CLOSEPAREN . COLON TYPE OPENCURLY Body CLOSECURLY

    COLON  shift, and go to state 19


state 16

    7 NEParam_List: Param SEMICOLON . NEParam_List

    IDENTIFIER  shift, and go to state 9

    NEParam_List  go to state 20
    Param         go to state 12
    Ident_List    go to state 13


state 17

    9 Param: Ident_List COLON . TYPE

    TYPE  shift, and go to state 21


state 18

   10 Ident_List: IDENTIFIER COMMA Ident_List .

    $default  reduce using rule 10 (Ident_List)


state 19

    4 F_NT: FUNCTION IDENTIFIER OPENPAREN Param_List CLOSEPAREN COLON . TYPE OPENCURLY Body CLOSECURLY

    TYPE  shift, and go to state 22


state 20

    7 NEParam_List: Param SEMICOLON NEParam_List .

    $default  reduce using rule 7 (NEParam_List)


state 21

    9 Param: Ident_List COLON TYPE .

    $default  reduce using rule 9 (Param)


state 22

    4 F_NT: FUNCTION IDENTIFIER OPENPAREN Param_List CLOSEPAREN COLON TYPE . OPENCURLY Body CLOSECURLY

    OPENCURLY  shift, and go to state 23


state 23

    4 F_NT: FUNCTION IDENTIFIER OPENPAREN Param_List CLOSEPAREN COLON TYPE OPENCURLY . Body CLOSECURLY

    VAR  shift, and go to state 24

    $default  reduce using rule 14 (Var_Dec_List)

    Body            go to state 25
    Var_Dec_List    go to state 26
    NEVar_Dec_List  go to state 27
    Var_Dec         go to state 28


state 24

   17 Var_Dec: VAR . Ident_List COLON Dec_Type

    IDENTIFIER  shift, and go to state 9

    Ident_List  go to state 29


state 25

    4 F_NT: FUNCTION IDENTIFIER OPENPAREN Param_List CLOSEPAREN COLON TYPE OPENCURLY Body . CLOSECURLY

    CLOSECURLY  shift, and go to state 30


state 26

   12 Body: Var_Dec_List . F_Dec_List S_List Return_S

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 21 (F_Dec_List)

    F_NT          go to state 31
    F_Dec_List    go to state 32
    NEF_Dec_List  go to state 33
    F_Dec         go to state 34


state 27

   13 Var_Dec_List: NEVar_Dec_List .

    $default  reduce using rule 13 (Var_Dec_List)


state 28

   15 NEVar_Dec_List: Var_Dec . SEMICOLON NEVar_Dec_List
   16               | Var_Dec . SEMICOLON

    SEMICOLON  shift, and go to state 35


state 29

   17 Var_Dec: VAR Ident_List . COLON Dec_Type

    COLON  shift, and go to state 36


state 30

    4 F_NT: FUNCTION IDENTIFIER OPENPAREN Param_List CLOSEPAREN COLON TYPE OPENCURLY Body CLOSECURLY .

    $default  reduce using rule 4 (F_NT)


state 31

   24 F_Dec: F_NT .

    $default  reduce using rule 24 (F_Dec)


state 32

   12 Body: Var_Dec_List F_Dec_List . S_List Return_S

    IDENTIFIER  shift, and go to state 37
    IF          shift, and go to state 38
    WHILE       shift, and go to state 39
    YIELD       shift, and go to state 40

    $default  reduce using rule 26 (S_List)

    S_List      go to state 41
    NES_List    go to state 42
    S           go to state 43
    Ass_S       go to state 44
    Arr_Ass_St  go to state 45
    C_S         go to state 46
    Arr_C_S     go to state 47
    If_S        go to state 48
    Y_S         go to state 49
    If_E_S      go to state 50
    W_S         go to state 51


state 33

   20 F_Dec_List: NEF_Dec_List .

    $default  reduce using rule 20 (F_Dec_List)


state 34

   22 NEF_Dec_List: F_Dec . NEF_Dec_List
   23             | F_Dec .

    FUNCTION  shift, and go to state 1

    $default  reduce using rule 23 (NEF_Dec_List)

    F_NT          go to state 31
    NEF_Dec_List  go to state 52
    F_Dec         go to state 34


state 35

   15 NEVar_Dec_List: Var_Dec SEMICOLON . NEVar_Dec_List
   16               | Var_Dec SEMICOLON .

    VAR  shift, and go to state 24

    $default  reduce using rule 16 (NEVar_Dec_List)

    NEVar_Dec_List  go to state 53
    Var_Dec         go to state 28


state 36

   17 Var_Dec: VAR Ident_List COLON . Dec_Type

    TYPE        shift, and go to state 54
    IDENTIFIER  shift, and go to state 55

    Dec_Type  go to state 56


state 37

   37 Ass_S: IDENTIFIER . AS_OP Expr SEMICOLON
   38 Arr_Ass_St: IDENTIFIER . OPENBRACKET Expr CLOSEBRACKET AS_OP Expr SEMICOLON
   39 C_S: IDENTIFIER . AS_OP IDENTIFIER OPENPAREN Arg_List CLOSEPAREN SEMICOLON
   40 Arr_C_S: IDENTIFIER . OPENBRACKET Expr CLOSEBRACKET AS_OP IDENTIFIER OPENPAREN Arg_List CLOSEPAREN SEMICOLON

    AS_OP        shift, and go to state 57
    OPENBRACKET  shift, and go to state 58


state 38

   45 If_S: IF . OPENPAREN Expr CLOSEPAREN OPENCURLY S_List CLOSECURLY
   47 If_E_S: IF . OPENPAREN Expr CLOSEPAREN OPENCURLY S_List CLOSECURLY ELSE OPENCURLY S_List CLOSECURLY

    OPENPAREN  shift, and go to state 59


state 39

   48 W_S: WHILE . OPENPAREN Expr CLOSEPAREN OPENCURLY S_List CLOSECURLY

    OPENPAREN  shift, and go to state 60


state 40

   46 Y_S: YIELD . Expr SEMICOLON

    IDENTIFIER  shift, and go to state 61
    INT         shift, and go to state 62
    RATIONAL    shift, and go to state 63
    TRUE_NT     shift, and go to state 64
    FALSE_NT    shift, and go to state 65
    MINUS       shift, and go to state 66
    NOT_OP      shift, and go to state 67
    OPENPAREN   shift, and go to state 68

    Expr   go to state 69
    U_Lit  go to state 70
    Lit    go to state 71


state 41

   12 Body: Var_Dec_List F_Dec_List S_List . Return_S

    RETURN  shift, and go to state 72

    Return_S  go to state 73


state 42

   25 S_List: NES_List .

    $default  reduce using rule 25 (S_List)


state 43

   27 NES_List: S . NES_List
   28         | S .

    IDENTIFIER  shift, and go to state 37
    IF          shift, and go to state 38
    WHILE       shift, and go to state 39
    YIELD       shift, and go to state 40

    $default  reduce using rule 28 (NES_List)

    NES_List    go to state 74
    S           go to state 43
    Ass_S       go to state 44
    Arr_Ass_St  go to state 45
    C_S         go to state 46
    Arr_C_S     go to state 47
    If_S        go to state 48
    Y_S         go to state 49
    If_E_S      go to state 50
    W_S         go to state 51


state 44

   29 S: Ass_S .

    $default  reduce using rule 29 (S)


state 45

   30 S: Arr_Ass_St .

    $default  reduce using rule 30 (S)


state 46

   31 S: C_S .

    $default  reduce using rule 31 (S)


state 47

   32 S: Arr_C_S .

    $default  reduce using rule 32 (S)


state 48

   33 S: If_S .

    $default  reduce using rule 33 (S)


state 49

   34 S: Y_S .

    $default  reduce using rule 34 (S)


state 50

   35 S: If_E_S .

    $default  reduce using rule 35 (S)


state 51

   36 S: W_S .

    $default  reduce using rule 36 (S)


state 52

   22 NEF_Dec_List: F_Dec NEF_Dec_List .

    $default  reduce using rule 22 (NEF_Dec_List)


state 53

   15 NEVar_Dec_List: Var_Dec SEMICOLON NEVar_Dec_List .

    $default  reduce using rule 15 (NEVar_Dec_List)


state 54

   18 Dec_Type: TYPE .

    $default  reduce using rule 18 (Dec_Type)


state 55

   19 Dec_Type: IDENTIFIER . OPENBRACKET INT CLOSEBRACKET

    OPENBRACKET  shift, and go to state 75


state 56

   17 Var_Dec: VAR Ident_List COLON Dec_Type .

    $default  reduce using rule 17 (Var_Dec)


state 57

   37 Ass_S: IDENTIFIER AS_OP . Expr SEMICOLON
   39 C_S: IDENTIFIER AS_OP . IDENTIFIER OPENPAREN Arg_List CLOSEPAREN SEMICOLON

    IDENTIFIER  shift, and go to state 76
    INT         shift, and go to state 62
    RATIONAL    shift, and go to state 63
    TRUE_NT     shift, and go to state 64
    FALSE_NT    shift, and go to state 65
    MINUS       shift, and go to state 66
    NOT_OP      shift, and go to state 67
    OPENPAREN   shift, and go to state 68

    Expr   go to state 77
    U_Lit  go to state 70
    Lit    go to state 71


state 58

   38 Arr_Ass_St: IDENTIFIER OPENBRACKET . Expr CLOSEBRACKET AS_OP Expr SEMICOLON
   40 Arr_C_S: IDENTIFIER OPENBRACKET . Expr CLOSEBRACKET AS_OP IDENTIFIER OPENPAREN Arg_List CLOSEPAREN SEMICOLON

    IDENTIFIER  shift, and go to state 61
    INT         shift, and go to state 62
    RATIONAL    shift, and go to state 63
    TRUE_NT     shift, and go to state 64
    FALSE_NT    shift, and go to state 65
    MINUS       shift, and go to state 66
    NOT_OP      shift, and go to state 67
    OPENPAREN   shift, and go to state 68

    Expr   go to state 78
    U_Lit  go to state 70
    Lit    go to state 71


state 59
